syntax = "proto3";
option go_package = "./proto";

package proto;

message Message {
    string chatId = 1;
    string fromUserId = 2;
    string toUserId = 3;
    string content = 4;
    string createdAt = 5;
    string messageId = 6;
}

message SendMessageResponse {
    string message = 1;
}

message GetUserChatsRequest {

}

message GetUserChatsResponse{
    repeated Chat chats = 1;
}

message StartChatRequest {
    string toUserId = 1;
}

message StartChatResponse {
    string chatId = 1;
}

message Chat {
    string chatId = 1;
    string fromUserId = 2;
    string toUserId = 3;
}

message GetChatMessageRequest {
    string chatId = 1;
    string StartMsgId = 2;
}

message GetChatMessageResponse {
    repeated Message messages = 1;
}


service chat {
    rpc SendMessage(Message) returns (SendMessageResponse);
    rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse);
    rpc StartChat(StartChatRequest) returns (StartChatResponse);
    rpc GetChatMessages(GetChatMessageRequest) returns (GetChatMessageResponse);
    
}

